--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Mapa de Proyectos</title>
+  <title>Mapa de Megaproyecto y problemáticas socioambientales</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
@@ -28,7 +28,7 @@
 
     let proyectoLayer;
 
-    fetch('proyectos.geojson')
+    fetch('megaproyectos.geojson')
       .then(res => res.json())
       .then(data => {
         proyectoLayer = L.geoJSON(data, {
