--- a/index.html
+++ b/index.html
@@ -4,42 +4,61 @@
   <meta charset="UTF-8">
   <title>Mapa de Megaproyectos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    #mapa {
-      height: 90vh;
-    }
-
+    #map { height: 90vh; }
     #buscar {
       margin: 10px;
       width: 300px;
       padding: 5px;
     }
-
-    .info-leyenda {
+    .legend {
       background: white;
-      padding: 6px 10px;
-      border-radius: 5px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-      font-size: 14px;
-    }
-
-    .info-leyenda i {
-      width: 18px;
-      height: 18px;
-      float: left;
-      margin-right: 8px;
-      opacity: 0.7;
+      padding: 10px;
+      line-height: 18px;
+      color: #555;
     }
   </style>
 </head>
 <body>
-  <input type="text" id="buscar" placeholder="Buscar proyecto..." />
-  <div id="mapa"></div>
+  <input type="text" id="buscar" placeholder="Buscar proyecto...">
+  <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
   <script>
-    const mapa = L.map('mapa').setView([23.5, -102], 5);
+    function obtenerColor(tipo) {
+      const colores = {
+        "Desarrollo turístico": "#e41a1c",
+        "Desarrollo turístico (hotel-resort)": "#ff7f00",
+        "Desarrollo urbano municipal": "#a65628",
+        "Energía solar (megaproyecto)": "#fdbf6f",
+        "Eólico": "#377eb8",
+        "Exportación de gas natural licuado (GNL)": "#984ea3",
+        "Extractivo e Infraestructura": "#999999",
+        "Fracking": "#dede00",
+        "Gasoducto": "#4daf4a",
+        "Gasoducto y termoeléctrica": "#a6cee3",
+        "Hidroeléctrico": "#1f78b4",
+        "Hidroeléctrico / Equipamiento": "#b2df8a",
+        "Industrial / Portuario": "#f781bf",
+        "Infraestructura aeroportuaria / urbana": "#8dd3c7",
+        "Infraestructura carretera": "#fb8072",
+        "Infraestructura carretera (transporte)": "#80b1d3",
+        "Infraestructura ferroviaria": "#bebada",
+        "Infraestructura ferroviaria (transporte)": "#bc80bd",
+        "Infraestructura ferroviaria y logística": "#fccde5",
+        "Infraestructura hidráulica": "#ffffb3",
+        "Infraestructura vial": "#b3de69",
+        "Minería": "#d9d9d9",
+        "Termoeléctrica": "#ffed6f",
+        "Turismo": "#cab2d6",
+        "Turístico": "#bc80bd"
+      };
+      return colores[tipo] || "#000000";
+    }
+
+    const mapa = L.map('map').setView([23.5, -102.1], 5);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '© OpenStreetMap'
@@ -47,30 +66,13 @@
 
     let proyectoLayer;
 
-    // Colores por tipo de megaproyecto
-    const coloresPorTipo = {
-      "Hidroeléctrico": "#1f78b4",
-      "Minero": "#33a02c",
-      "Carretero": "#ff7f00",
-      "Ferroviario": "#6a3d9a",
-      "Turístico": "#e31a1c",
-      "Energético": "#b15928",
-      "Otro": "#bbbbbb"
-    };
-
-    // Función para asignar color según tipo
-    function obtenerColor(tipo) {
-      return coloresPorTipo[tipo] || "#bbbbbb";
-    }
-
-    // Función para mostrar capa GeoJSON
     fetch('megaproyectos.geojson')
       .then(res => res.json())
       .then(datos => {
         proyectoLayer = L.geoJSON(datos, {
           pointToLayer: function (feature, latlng) {
             return L.circleMarker(latlng, {
-              radius: 7,
+              radius: 6,
               fillColor: obtenerColor(feature.properties.Tipo),
               color: "#000",
               weight: 1,
@@ -80,7 +82,7 @@
           },
           onEachFeature: function (feature, layer) {
             const props = feature.properties;
-            const contenido = `
+            const popup = `
               <strong>${props.Nombre}</strong><br>
               Tipo: ${props.Tipo}<br>
               Estado: ${props.Estado}<br>
@@ -89,38 +91,42 @@
               Impacto ambiental: ${props.Impacto_ambiental}<br>
               Fuente: <a href="${props.Fuente}" target="_blank">ver fuente</a>
             `;
-            layer.bindPopup(contenido);
+            layer.bindPopup(popup);
+            layer.feature = feature;
           }
         }).addTo(mapa);
       });
 
-    // Búsqueda
+    // Buscador dinámico
     document.getElementById('buscar').addEventListener('input', function () {
       const valor = this.value.toLowerCase();
-      if (!proyectoLayer) return;
-
-      proyectoLayer.eachLayer(layer => {
+      proyectoLayer.eachLayer(function (layer) {
         const nombre = layer.feature.properties.Nombre.toLowerCase();
         if (nombre.includes(valor)) {
+          const coords = layer.getLatLng();
+          mapa.setView(coords, 9);
           layer.openPopup();
-          mapa.setView(layer.getLatLng(), 9);
         }
       });
     });
 
     // Leyenda
     const leyenda = L.control({ position: 'bottomright' });
-
     leyenda.onAdd = function () {
-      const div = L.DomUtil.create('div', 'info-leyenda');
-      div.innerHTML = '<strong>Tipo de proyecto</strong><br>';
-      for (let tipo in coloresPorTipo) {
-        div.innerHTML +=
-          `<i style="background:${coloresPorTipo[tipo]}"></i> ${tipo}<br>`;
-      }
+      const div = L.DomUtil.create('div', 'legend');
+      const tipos = [
+        "Desarrollo turístico", "Eólico", "Fracking", "Gasoducto",
+        "Hidroeléctrico", "Minería", "Termoeléctrica", "Turismo"
+      ];
+      let etiquetas = [];
+      tipos.forEach(tipo => {
+        etiquetas.push(
+          `<i style="background:${obtenerColor(tipo)}; width:18px; height:18px; display:inline-block; margin-right:5px;"></i> ${tipo}`
+        );
+      });
+      div.innerHTML = etiquetas.join('<br>');
       return div;
     };
-
     leyenda.addTo(mapa);
   </script>
 </body>
